command-derive/tests/02-reject-struct.stderr
error: expected `enum`
 --> $DIR/02-reject-struct.rs:4:1
  |
4 | struct Handshake {
  | ^^^^^^
