command-derive/tests/02-reject-struct.rs
use command_derive::*;

#[derive(Command)]
struct Handshake {
    hdid: String
}

fn main() {}
